# configGenerator

./: CMakeLists.txt  README.md
src/: main.cpp
src/config_generator/: config_generator.hpp
src/http/: http_worker.hpp
src/json/: json.hpp
test/: http_client.py
